[project]
name = "minivllm-mac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pytest>=9.1.0",
    "safetensors>=0.8.0",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "xxhash>=3.7.0",
]
